--- a/02_Trend.ipynb
+++ b/02_Trend.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Moving Average Plots"
+    "## Trend Plots"
    ]
   },
   {
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "moving_average = tunnel.rolling(\n",
+    "trend = dataset.rolling(\n",
     "    window=365,       # 365-day window\n",
     "    center=True,      # puts the average at the center of the window\n",
     "    min_periods=183,  # choose about half the window size\n",
@@ -20,7 +20,7 @@
     "\n",
     "ax = tunnel.plot(style=\".\", color=\"0.5\")\n",
     "moving_average.plot(\n",
-    "    ax=ax, linewidth=3, title=\"Tunnel Traffic - 365-Day Moving Average\", legend=False,\n",
+    "    ax=ax, linewidth=3, title=\"Tunnel Traffic - 365-Day Moving Average(Trend)\", legend=False,\n",
     ");\n",
     "```"
    ]
@@ -47,6 +47,19 @@
     ")\n",
     "# `in_sample` creates features for the dates given in the `index` argument\n",
     "X = dp.in_sample()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "# Create features for a 30-day forecast.\n",
+    "X = dp.out_of_sample(steps=30)  \n",
+    "\n",
+    "# Predict for the 30-day outside of the observation of training set.\n",
+    "y_fore = pd.Series(model.predict(X), index=X.index)\n",
     "```"
    ]
   },
