--- a/04_Time Series as Features.ipynb
+++ b/04_Time Series as Features.ipynb
@@ -42,8 +42,8 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "_ = plot_lags(flu_trends.FluVisits, lags=12, nrows=2)   # Lag plots\n",
-    "_ = plot_pacf(flu_trends.FluVisits, lags=12)            # Autocorrelation plots\n",
+    "plot_lags(flu_trends.FluVisits, lags=12, nrows=2)   # Lag plots\n",
+    "plot_pacf(flu_trends.FluVisits, lags=12)            # Autocorrelation plots\n",
     "```"
    ]
   },
@@ -71,7 +71,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Leading indicators : time series that could provide an \"early warning\" for changes "
+    "* Leading indicators : time series that could provide an \"early warning\" for changes \n",
+    "* In Flue exampl, flu-related searches tend to become more popular in the weeks prior to office visits."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "search_terms = [\"FluContagious\", \"FluCough\", \"FluFever\", \"InfluenzaA\", \"TreatFlu\", \"IHaveTheFlu\", \"OverTheCounterFlu\", \"HowLongFlu\"]\n",
+    "\n",
+    "# Create three lags for each search term\n",
+    "X0 = make_lags(flu_trends[search_terms], lags=3)\n",
+    "\n",
+    "# Create four lags for the target, as before\n",
+    "X1 = make_lags(flu_trends['FluVisits'], lags=4) # lag1, lag2, lag3, lag4\n",
+    "\n",
+    "# Combine to create the training data\n",
+    "X = pd.concat([X0, X1], axis=1).fillna(0.0)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* cf) Make leading indicators\n",
+    "```python\n",
+    "X_promo = make_leads(onpromotion, leads=1)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Excerise Notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) **Deseasonalizing** : Trend and seasonality will both create serial dependence that shows up in correlograms and lag plots. To isolate any purely cyclic behavior, we'll start by *deseasonalizing* the series.\n",
+    "2) **moving-average plot** using original data : To confirm our intuition, we can try to isolate cyclic behavior using a *moving-average plot* just like we did with trend. The idea is to choose a window long enough to smooth over short-term seasonality, but short enough to still preserve the cycles."
    ]
   },
   {
