--- a/01_Linear Regression.ipynb
+++ b/01_Linear Regression.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Excerise Notes"
+    "## Excerise Notes"
    ]
   },
   {
