Updated indent for python code

--- a/05_Hybrid Models.ipynb
+++ b/05_Hybrid Models.ipynb
@@ -57,7 +57,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "```python\n",
+    "# The `stack` method converts column labels to row labels, pivoting from wide format to long\n",
+    "X = retail.stack()  # pivot dataset wide to long\n",
+    "display(X.head())\n",
+    "y = X.pop('Sales')  # grab target series\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
