--- a/05_Hybrid Models.ipynb
+++ b/05_Hybrid Models.ipynb
@@ -58,12 +58,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* To predict multiple series at once with XGBoost, we'll instead convert these series from wide format, with one time series per column, to long format, with series indexed by categories along rows.\n",
     "```python\n",
-    "# The `stack` method converts column labels to row labels, pivoting from wide format to long\n",
-    "X = retail.stack()  # pivot dataset wide to long\n",
-    "display(X.head())\n",
-    "y = X.pop('Sales')  # grab target series\n",
+    "    # The `stack` method converts column labels to row labels, pivoting from wide format to long\n",
+    "    X = retail.stack()  # pivot dataset wide to long\n",
+    "    display(X.head())\n",
+    "    y = X.pop('Sales')  # grab target series\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"05_before.png\" alt=\"title\" width=\"300\"/> $\\Rightarrow$ <img src=\"05_after.png\" alt=\"title\" width=\"300\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Turn the row labels for 'Industries' into a categorical feature with a label encoding. Also create a feature for annual seasonality by pulling the month numbers out of the time index.\n",
+    "```python\n",
+    "    # Turn row labels into categorical feature columns with a label encoding\n",
+    "    X = X.reset_index('Industries')\n",
+    "    # Label encoding for 'Industries' feature\n",
+    "    for colname in X.select_dtypes([\"object\", \"category\"]):\n",
+    "        X[colname], _ = X[colname].factorize()\n",
+    "\n",
+    "    # Label encoding for annual seasonality\n",
+    "    X[\"Month\"] = X.index.month  # values are 1, 2, ..., 12\n",
+    "\n",
+    "    # Create splits\n",
+    "    X_train, X_test = X.loc[idx_train, :], X.loc[idx_test, :]\n",
+    "    y_train, y_test = y.loc[idx_train], y.loc[idx_test]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* convert the trend predictions made earlier to long format and then subtract them from the original series. That will give us detrended (residual) series that XGBoost can learn.\n",
+    "```python\n",
+    "    # Pivot wide to long (stack) and convert DataFrame to Series (squeeze)\n",
+    "    y_fit = y_fit.stack().squeeze()    # trend from training set\n",
+    "    y_pred = y_pred.stack().squeeze()  # trend from test set\n",
+    "\n",
+    "    # Create residuals (the collection of detrended series) from the training set\n",
+    "    y_resid = y_train - y_fit\n",
+    "\n",
+    "    # Train XGBoost on the residuals\n",
+    "    xgb = XGBRegressor()\n",
+    "    xgb.fit(X_train, y_resid)\n",
+    "\n",
+    "    # Add the predicted residuals onto the predicted trends\n",
+    "    y_fit_boosted = xgb.predict(X_train) + y_fit\n",
+    "    y_pred_boosted = xgb.predict(X_test) + y_pred\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Excerise Notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Create a boosted hybrid\n",
+    "    ```python\n",
+    "    class BoostedHybrid:\n",
+    "        def __init__(self, model_1, model_2):\n",
+    "            self.model_1 = model_1\n",
+    "            self.model_2 = model_2\n",
+    "            self.y_columns = None  # store column names from fit method\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Add method to class<br>\n",
+    "    ```python\n",
+    "    classname.method = method   \n",
+    "    # e.g. BoostedHybrid.predict = predict\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Train boosted hybrid\n",
+    "    ```python\n",
+    "    # Create LinearRegression + XGBRegressor hybrid with BoostedHybrid\n",
+    "    model = BoostedHybrid(\n",
+    "        model_1=LinearRegression(),\n",
+    "        model_2=XGBRegressor(),\n",
+    "    )\n",
+    "\n",
+    "    # Fit and predict\n",
+    "    model.fit(X_1, X_2, y)\n",
+    "    y_pred = model.predict(X_1, X_2)\n",
+    "\n",
+    "    y_pred = y_pred.clip(0.0)\n",
+    "    ```"
    ]
   }
  ],
