--- a/06_Forecasting With Machine Learning.ipynb
+++ b/06_Forecasting With Machine Learning.ipynb
@@ -75,6 +75,58 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Excerise Notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Examples\n",
+    "1) 1-step forecast using 3 lag features with a 1-step lead time<br>\n",
+    "<img src=\"06_task1.png\" alt=\"title\" width=\"220\"/><br>\n",
+    "\n",
+    "2) 3-step forecast using 4 lag features with a 2-step lead time<br>\n",
+    "<img src=\"06_task2.png\" alt=\"title\" width=\"380\"/><br>\n",
+    "\n",
+    "3) 3-step forecast using 4 lag features with a 1-step lead time<br>\n",
+    "<img src=\"06_task3.png\" alt=\"title\" width=\"380\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Creat targets (4 days of lag features. Drop any missing values from both targets and features.)<br>\n",
+    "    ```python\n",
+    "    y = family_sales.loc[:, 'sales']\n",
+    "\n",
+    "    # Make 4 lag features and drop missing values\n",
+    "    X = make_lags(y, lags=4).dropna\n",
+    "\n",
+    "    # Make multistep target and drop missing values\n",
+    "    y = make_multistep_target(y, steps=16).dropna()\n",
+    "\n",
+    "    y, X = y.align(X, join='inner', axis=0)\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Forecast with the DirRec strategy¶\n",
+    "    ```python\n",
+    "    from sklearn.multioutput import RegressorChain\n",
+    "    # Instatiate a model that applies the DirRec strategy to XGBoost.\n",
+    "    model = RegressorChain(base_estimator=XGBRegressor())\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
