--- a/05_Hybrid Models.ipynb
+++ b/05_Hybrid Models.ipynb
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Excerise Notes"
+    "## Exercise Notes"
    ]
   },
   {
@@ -144,10 +144,10 @@
    "metadata": {},
    "source": [
     "* Add method to class<br>\n",
-    "    ```python\n",
+    "```python\n",
     "    classname.method = method   \n",
     "    # e.g. BoostedHybrid.predict = predict\n",
-    "    ```"
+    "```"
    ]
   },
   {
