--- a/06_Forecasting With Machine Learning.ipynb
+++ b/06_Forecasting With Machine Learning.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Excerise Notes"
+    "## Exercise Notes"
    ]
   },
   {
@@ -119,15 +119,11 @@
     "* Forecast with the DirRec strategy¶\n",
     "    ```python\n",
     "    from sklearn.multioutput import RegressorChain\n",
+    "    \n",
     "    # Instatiate a model that applies the DirRec strategy to XGBoost.\n",
     "    model = RegressorChain(base_estimator=XGBRegressor())\n",
     "    ```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
