--- a/04_Time Series as Features.ipynb
+++ b/04_Time Series as Features.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Excerise Notes"
+    "## Exercise Notes"
    ]
   },
   {
